Modificacion de la estructura de los recursos
